--- a/src/app/pages/video/containers/video-page/video-page.component.html
+++ b/src/app/pages/video/containers/video-page/video-page.component.html
@@ -1,7 +1,7 @@
 <div class="page-content">
   <div class="container" *ngIf="(pageContent$ | async)">
     <div class="row">
-      <div class="col-lg-9">
+      <div class="col-lg-9 pr-3 pr-lg-4">
         <div class="video-content">
           <div class="top-head d-flex justify-content-between">
             <ul>
@@ -55,17 +55,6 @@
             </div>
           </div>
         </div>
-        <div class="related-content" *ngIf="(pageContent$ | async)?.relativeTopicList.length">
-          <h2 class="section-title">Related Content</h2>
-          <div class="row">
-            <div class="col-4" *ngFor="let topic of (pageContent$ | async)?.relativeTopicList">
-              <dsod-related-content [content]="topic" [contentTypeName]="(pageContent$ | async)?.contentTypeName"></dsod-related-content>
-            </div>
-          </div>
-        </div>
-        <div *ngIf="isLoggedIn">
-          <dsod-article-reviews [content]="pageContent$ | async" (updateRating)="updateRating($event)"></dsod-article-reviews>
-        </div>
       </div>
       <div class="col-lg-3">
         <section class="trending-videos" *ngIf="(trendingTopics$ |async)?.length">
@@ -82,6 +71,21 @@
             </div>
           </div>
         </section>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-9">
+        <div class="related-content" *ngIf="(pageContent$ | async)?.relativeTopicList.length">
+          <h2 class="section-title">Related Content</h2>
+          <div class="row">
+            <div class="col-4" *ngFor="let topic of (pageContent$ | async)?.relativeTopicList">
+              <dsod-related-content [content]="topic" [contentTypeName]="(pageContent$ | async)?.contentTypeName"></dsod-related-content>
+            </div>
+          </div>
+        </div>
+        <div *ngIf="isLoggedIn">
+          <dsod-article-reviews [content]="pageContent$ | async" (updateRating)="updateRating($event)"></dsod-article-reviews>
+        </div>
       </div>
     </div>
   </div>
