--- a/src/app/pages/article/containers/article-page/article.component.scss
+++ b/src/app/pages/article/containers/article-page/article.component.scss
@@ -17,3 +17,27 @@
     }
   }
 }
+
+.trending-videos {
+  border-left: 1px solid #ccc;
+  margin-left: -15px;
+  padding-left: 30px;
+
+  h2.section-title {
+    font-size: 30px;
+  }
+}
+
+@media only screen and (max-width:1440px){
+  .trending-videos {
+    h2.section-title {
+      font-size: 20px;
+    }
+  }
+}
+@media only screen and (max-width:1199px) {
+  .trending-videos {
+    padding-left: 15px;
+    margin: 0;
+  }
+}
