--- a/src/app/pages/video/containers/video-page/video-page.component.scss
+++ b/src/app/pages/video/containers/video-page/video-page.component.scss
@@ -64,7 +64,15 @@
   }
 
 }
+.trending-videos {
+  border-left: 1px solid #ccc;
+  margin-left: -15px;
+  padding-left: 30px;
 
+  h2.section-title {
+    font-size: 30px;
+  }
+}
 @media only screen and (max-width:1600px) {
   .video-content {
     .video-header {
@@ -80,10 +88,21 @@
     }
   }
 }
+@media only screen and (max-width:1440px) {
+  .trending-videos { 
 
+    h2.section-title {
+      font-size: 20px;
+    }
+  }
+}
 @media only screen and (max-width:1199px) {
   .top-head {
     padding: 20px 0;
+  }
+  .trending-videos {
+    padding-left: 15px;
+    margin: 0; 
   }
 }
 
