--- a/src/app/pages/events/containers/events-page.component.html
+++ b/src/app/pages/events/containers/events-page.component.html
@@ -46,7 +46,7 @@
       </h2>
 
       <div class="row">
-        <div class="col-xl-4 col-lg-6 col-md-6 pb-md-3" *ngFor="let event of events">
+        <div class="col-xl-4 col-lg-6 col-md-6 pb-md-3" *ngFor="let event of events" (click)="navigateTo(event)">
           <dsod-event-card [isEditable]="isEditingEnable" [event]="event" [isdeleteable]="isdeletionEnable"
             (deleteEvent)="deleteEvent($event)"></dsod-event-card>
         </div>
