--- a/src/app/pages/home/components/latest/latest.component.scss
+++ b/src/app/pages/home/components/latest/latest.component.scss
@@ -10,8 +10,12 @@
 
 
     .latest-block-header {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: space-between;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
       padding: 17px 15px 9px;
 
       h4 {
@@ -23,9 +27,17 @@
     .latest-block-thumbnail {
       position: relative;
       border-top: 3px solid $mine_grey;
+      padding-top: 66.6%;
 
       >img {
         width: 100%;
+        width: 100%;
+        height: 100%;
+        -o-object-fit: cover;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
       }
 
       >Video {
