--- a/src/app/pages/home/components/our-sponsors/our-sponsors.component.scss
+++ b/src/app/pages/home/components/our-sponsors/our-sponsors.component.scss
@@ -17,7 +17,7 @@
 
       img {
         -ms-flex-item-align: center;
-            align-self: center;
+        align-self: center;
         margin-right: 20px;
       }
     }
@@ -56,8 +56,8 @@
       display: -ms-flexbox;
       display: flex;
       -webkit-box-pack: justify;
-          -ms-flex-pack: justify;
-              justify-content: space-between;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
       padding: 21px 15px 9px;
 
       h4 {
@@ -75,6 +75,24 @@
         width: 100%;
       }
     }
+  }
+
+  /deep/ .trending-block-video {
+    position: relative;
+    padding-top: 97%;
+
+    >img {
+      width: 100%;
+      width: 100%;
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+      object-fit: cover;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
   }
 }
 
@@ -99,6 +117,14 @@
           }
         }
       }
+    }
+  }
+}
+
+@media only screen and (max-width:1430px) {
+  .sponsors-ortho {
+     /deep/ .trending-block-video {
+      padding-top: 114%;
     }
   }
 }
