--- a/src/app/pages/home/components/podcasts-by/podcasts-by.component.scss
+++ b/src/app/pages/home/components/podcasts-by/podcasts-by.component.scss
@@ -97,3 +97,13 @@
     }
   }
 }
+
+@media only screen and (max-width:1366px) and (min-width:991px) {
+  .featured-podcasts-block-sm {
+    .podcasts-block-header {
+      h4 {
+        font-size: 11px;
+      }
+    }
+  }
+}
