--- a/src/app/pages/podcast/containers/podcast-page.component.scss
+++ b/src/app/pages/podcast/containers/podcast-page.component.scss
@@ -107,7 +107,7 @@
   padding: 15px 0;
   border: 1px solid #8799A7;
   border-width: 1px 0;
-  margin: 20px 0;
+  margin: 0px 0 20px;
 }
 
 .join-ad {
