--- a/src/app/shared/components/topic/topic.component.scss
+++ b/src/app/shared/components/topic/topic.component.scss
@@ -117,11 +117,11 @@
 
   .topic-block-lg {
     .topic-block-thumbnail {
-      padding-top: 0;
+      padding-top: 66.6%;
 
       a {
         img {
-          position: relative !important;
+          // position: relative !important;
         }
       }
     }
@@ -246,6 +246,20 @@
               max-width: 32px;
             }
           }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:1366px) and (min-width:991px) {
+  :host {
+
+    .topic-block {
+      .topic-block-header {
+
+        h4 {
+          font-size: 11px;
         }
       }
     }
