--- a/src/app/pages/home/components/podcasts/podcasts.component.scss
+++ b/src/app/pages/home/components/podcasts/podcasts.component.scss
@@ -7,52 +7,43 @@
       color: $mine_grey;
       text-transform: uppercase;
     }
-
     h4 {
       font-size: 28px;
       color: $mine_grey;
-
       span {
         color: $color-primary;
         font-weight: 500;
       }
     }
   }
-
   .podcasts-tabs {
     margin: 50px 0;
     position: relative;
-
     /deep/.tab-container {
       width: 100%;
     }
-
     h3.podcasts-title {
       font-size: 28px;
       font-weight: 300;
       color: $color-primary;
       position: absolute;
-      top: 25px;
+      // top: 25px;
     }
-
     /deep/ ul.nav.nav-tabs {
       margin-left: 300px;
       border: none;
-
       li.nav-item {
         font-size: 20px;
         color: $mine_grey;
         padding: 10px;
         margin: 0 17px;
         border-bottom: 2px solid transparent;
-
         a.nav-link {
           font-size: 20px;
           color: $mine_grey;
           padding: 10px;
           border: none;
         }
-
         &.active {
           border-bottom: 2px solid $color-primary;
         }
@@ -60,28 +51,22 @@
     }
   }
 }
-
 .featured-podcasts-block {
   margin: 15px auto;
-
   .podcasts-block-header {
     padding: 21px 15px 9px;
     background: $alabaster_white;
-
     h4 {
       color: $color-primary;
       font-size: 22px;
     }
   }
-
   .podcast-block-thumbnail {
     position: relative;
     border-top: 3px solid $mine_grey;
-
     >img {
       width: 100%;
     }
-
     .podcasts-block-caption {
       background: $dark_grey;
       padding: 14px 15px;
@@ -90,7 +75,6 @@
       width: 100%;
       left: 0;
       bottom: 0;
-
       h4 {
         color: $color-white;
         font-size: 16px;
@@ -98,26 +82,21 @@
     }
   }
 }
-
 .podcasts-list {
   padding-top: 15px;
 }
-
 .podcasts-pagination {
   ul {
     text-align: center;
-
     >li {
       display: inline-block;
       margin: 0 10px;
-
       .btn {
         background: transparent;
         font-size: 35px;
         line-height: 30px;
         color: $color-primary;
       }
-
       &.active {
         .btn {
           color: $text-main;
@@ -126,12 +105,10 @@
     }
   }
 }
-
 .podcasts-tabs {
   /deep/ .tab-content {
     .tab-pane {
       position: relative;
-
       a.pod-left-control,
       a.pod-right-control {
         position: absolute;
@@ -145,11 +122,9 @@
           max-width: 100%;
         }
       }
-
       a.pod-left-control {
         left: -60px;
       }
-
       a.pod-right-control {
         right: -60px;
       }
@@ -158,20 +133,16 @@
 }
 
 @media only screen and (max-width:1440px) {
- 
-
   .podcasts {
     .podcasts-about {
       h3 {
         font-size: 32px;
       }
-
       h4 {
         font-size: 24px;
       }
     }
   }
-
   .featured-podcasts-block {
     .podcasts-block-header {
       h4 {
@@ -210,7 +181,6 @@
            max-height: 30px;
            left: -40px;
           }
-          
           a.pod-right-control {
             max-width: 30px;
             max-height: 30px;
