fixed podcast view for DSTP-583

--- a/src/app/pages/home/components/podcasts/podcasts.component.scss
+++ b/src/app/pages/home/components/podcasts/podcasts.component.scss
@@ -17,7 +17,7 @@
     }
   }
   .podcasts-tabs {
-    margin: 50px 0;
+    margin: 50px 0 0;
     position: relative;
     /deep/.tab-container {
       width: 100%;
@@ -27,7 +27,6 @@
       font-weight: 300;
       color: $color-primary;
       position: absolute;
-      // top: 25px;
     }
     /deep/ ul.nav.nav-tabs {
       margin-left: 300px;
@@ -38,6 +37,7 @@
         padding: 10px;
         margin: 0 17px;
         border-bottom: 2px solid transparent;
+        cursor: pointer;
         a.nav-link {
           font-size: 20px;
           color: $mine_grey;
@@ -48,6 +48,37 @@
           border-bottom: 2px solid $color-primary;
         }
       }
+    }
+    .dropdown-container {
+      max-height: 250px;
+      overflow: auto;
+      .dropdown-item:active {
+        background-color: #f8f8f8;
+      }
+    }
+  }
+  .podcast-container {
+    width: 100%;
+    position: relative;
+    margin-bottom: 50px;
+    a.pod-left-control,
+    a.pod-right-control {
+      position: absolute;
+      top: 50%;
+      -webkit-box-shadow: 1px 3px 15px 0px rgba(0, 0, 0, 0.5);
+      box-shadow: 1px 3px 15px 0px rgba(0, 0, 0, 0.5);
+      border-radius: 50%;
+      overflow: hidden;
+      z-index: 9;
+      img{
+        max-width: 100%;
+      }
+    }
+    a.pod-left-control {
+      left: -60px;
+    }
+    a.pod-right-control {
+      right: -60px;
     }
   }
 }
@@ -101,32 +132,6 @@
         .btn {
           color: $text-main;
         }
-      }
-    }
-  }
-}
-.podcasts-tabs {
-  /deep/ .tab-content {
-    .tab-pane {
-      position: relative;
-      a.pod-left-control,
-      a.pod-right-control {
-        position: absolute;
-        top: 50%;
-        -webkit-box-shadow: 1px 3px 15px 0px rgba(0, 0, 0, 0.5);
-        box-shadow: 1px 3px 15px 0px rgba(0, 0, 0, 0.5);
-        border-radius: 50%;
-        overflow: hidden;
-        z-index: 9;
-        img{
-          max-width: 100%;
-        }
-      }
-      a.pod-left-control {
-        left: -60px;
-      }
-      a.pod-right-control {
-        right: -60px;
       }
     }
   }
@@ -196,4 +201,23 @@
        padding: 0 35px;
      }
    }
+}
+::-webkit-scrollbar {
+  width: 5px;
+	background-color: #F5F5F5;
+}
+/* Track */
+::-webkit-scrollbar-track {
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  width: 5px;
+  border-radius: 8px;
+	background-color: #555;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(110, 110, 110, 1);
 }
