--- a/src/app/pages/sponsors/container/sponsors-container.component.html
+++ b/src/app/pages/sponsors/container/sponsors-container.component.html
@@ -1,5 +1,5 @@
 <div class="header-container">
-  <div class="image-header-container"></div>
+<dsod-shared-carousal [images]="bannerImages" [caption]="caption"></dsod-shared-carousal>
 </div>
 <div class="content-wrapper">
   <router-outlet></router-outlet>
