--- a/src/app/shared/components/shared-carousal/shared-carousal.component.scss
+++ b/src/app/shared/components/shared-carousal/shared-carousal.component.scss
@@ -4,6 +4,14 @@
   position: relative;
   max-width: 1140px;
   margin: 0 auto;
+  .glide__slide {
+    text-align: center;
+
+    img {
+      max-height: 400px;
+      max-width: 1140px;
+    }
+  }
   .banner-overlay {
     position: absolute;
     width: 100%;
