--- a/src/app/shared/components/references/reference.component.html
+++ b/src/app/shared/components/references/reference.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-12">
-    <h2 *ngIf="references.length">References</h2>
+    <h2 *ngIf="references && references.length">References</h2>
     <ul>
-      <li *ngFor="let ref of references" [innerHTML]="ref"></li>
+      <li *ngFor="let ref of references" [innerHTML]="transform(ref)"></li>
     </ul>
   </div>
 </div>
