- implemented iFrameHeader video feature for DSTP-480

--- a/src/app/pages/preview/components/video-preview.component.html
+++ b/src/app/pages/preview/components/video-preview.component.html
@@ -12,6 +12,7 @@
       <div class="md-5 mt-5">
         <div *ngIf="content.featuredMedia" class="featured-media-container">
           <img *ngIf="content.featuredMedia?.type === '1' || content.featuredMedia?.type === '4'" [src]="getUrl(content.featuredMedia.code.thumbnail)" />
+          <div class="iframe-container" *ngIf="content.featuredMedia?.type === '6'" [innerHTML]="iFrameCode"></div>
           <audio *ngIf="content.featuredMedia?.type === '2'" controls>
             <source [src]="getUrl(content.featuredMedia.code.thumbnail)" type="audio/mp3">
           </audio>
