--- a/src/app/pages/article/components/article-content/article-content.component.html
+++ b/src/app/pages/article/components/article-content/article-content.component.html
@@ -1,2 +1,1 @@
-<div class="article-content" *ngIf="content" [innerHTML]="contentString">
-</div>
+<div class="article-content" *ngIf="content" [innerHTML]="contentString"></div>
