--- a/src/styles.scss
+++ b/src/styles.scss
@@ -128,6 +128,12 @@ ul, li, ul li {
     padding: 50px;
   }
 }
+.iframe-container {
+  /deep/ div {
+    max-width: none !important;
+    width: 100% !important;
+  }
+}
 
 @media only screen and (min-width:1440px) {
   .container {
