- fixed iFrame head section for DSTP-480

--- a/src/app/pages/home/components/latest-item/latest-item.component.html
+++ b/src/app/pages/home/components/latest-item/latest-item.component.html
@@ -2,10 +2,14 @@
   <div class="row">
     <div class="col-5">
       <div class="latest-block-thumbnail">
-        <img *ngIf="latestTopic.featuredMedia"
+        <img *ngIf="latestTopic.featuredMedia && latestTopic.featuredMedia.type !== '6'"
           [src]="getImageUrl(latestTopic.featuredMedia.code.thumbnail)"
           class="img-fluid" alt="Feautred Thumbnail Large"
-          (click)="navigateTo(latestTopic)">
+          (click)="navigateTo(latestTopic)" />
+        <div *ngIf="latestTopic.featuredMedia && latestTopic.featuredMedia.type === '6'"
+          class="img-fluid"
+          [innerHTML]="iFrameCode">
+        </div>
         <a href="javascript:void(0)" (click)="navigateTo(latestTopic)" class="read-about">
           <img src="assets/images/icons/{{latestTopic.contentTypeName}}.png" alt="">
         </a>
