--- a/src/app/pages/home/components/latest/latest.component.html
+++ b/src/app/pages/home/components/latest/latest.component.html
@@ -7,7 +7,8 @@
         [title]="latestTopics[0].title" [commentsCount]="latestTopics[0].countOfComment"></dsod-rating>
     </div>
     <div class="latest-block-thumbnail" *ngIf="latestTopics[0].featuredMedia" (click)="navigateTo(latestTopics[0])">
-      <img [src]="getImageUrl(latestTopics[0].featuredMedia.code.original)" class="img-fluid" alt="Feautred Thumbnail Large">
+      <img *ngIf="latestTopics[0].featuredMedia?.type !== '6'" class="img-fluid" [src]="getImageUrl(latestTopics[0].featuredMedia.code.original)" alt="Feautred Thumbnail Large">
+      <div *ngIf="latestTopics[0].featuredMedia?.type === '6'" class="img-fluid" [innerHTML]="iFrameCode"></div>
       <a href="javascript:void(0)" class="read-about">
         <img src="assets/images/icons/{{latestTopics[0].contentTypeName}}.png" alt="">
       </a>
