--- a/src/app/layout/search/search-item/search-item.component.html
+++ b/src/app/layout/search/search-item/search-item.component.html
@@ -2,7 +2,12 @@
   <div class="row">
     <div class="col-5">
       <div class="search-item-thumbnail">
-        <img (click)="navigateTo(topic)" src={{topic.featuredMedia.code.originalUrl}} class="img-fluid" alt="Feautred Thumbnail Large">
+        <img *ngIf="topic.featuredMedia?.type !== '6'"
+          (click)="navigateTo(topic)"
+          src={{topic.featuredMedia.code.originalUrl}}
+          class="img-fluid"
+          alt="Feautred Thumbnail Large" />
+        <div *ngIf="topic.featuredMedia?.type === '6'" class="img-fluid" [innerHTML]="iFrameCode"></div>
         <a href="javascript:void(0)" (click)="navigateTo(topic)" class="read-about">
           <img src="assets/images/icons/{{topic.contentTypeName}}.png" alt="">
         </a>
