--- a/src/app/pages/home/components/latest/latest.component.html
+++ b/src/app/pages/home/components/latest/latest.component.html
@@ -6,7 +6,10 @@
       <dsod-rating [avgRating]="latestTopics[0].avgCommentRating" readingType="short" [clickAble]="true" [contentId]="latestTopics[0].id"
         [title]="latestTopics[0].title" [commentsCount]="latestTopics[0].countOfComment"></dsod-rating>
     </div>
-    <div class="latest-block-thumbnail" *ngIf="latestTopics[0].featuredMedia" (click)="navigateTo(latestTopics[0])">
+    <div *ngIf="latestTopics[0].featuredMedia"
+      class="latest-block-thumbnail"
+      (click)="navigateTo(latestTopics[0])"
+    >
       <img *ngIf="latestTopics[0].featuredMedia?.type !== '6'" class="img-fluid" [src]="getImageUrl(latestTopics[0].featuredMedia.code.original)" alt="Feautred Thumbnail Large">
       <div *ngIf="latestTopics[0].featuredMedia?.type === '6'" class="img-fluid" [innerHTML]="iFrameCode"></div>
       <a href="javascript:void(0)" class="read-about">
