--- a/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.html
+++ b/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.html
@@ -1,6 +1,6 @@
 <div class="sponsor-post-container">
   <div *ngFor="let post of posts; let i = index">
-<div class="row post-container flex-sm-column-reverse flex-xl-row" [ngClass]="{'last-post': i >= posts.length - 2}">
+    <div class="row post-container flex-sm-column-reverse flex-xl-row" [ngClass]="{'last-post': i >= posts.length - 2}">
       <div class="col-xl-6">
         <div class="sponsor-desc">
           <div class="sponsor-header">
@@ -20,7 +20,15 @@
       </div>
       <div class="col-xl-6 thumbnail">
         <div class="img-container">
-          <img *ngIf="post.featuredMedia" class="img-fluid" src="{{post.featuredMedia.code.originalUrl}}" alt="">
+          <dsod-feartured-media [featuredMedia]="post.featuredMedia"></dsod-feartured-media>
+          <!-- <img *ngIf="post.featuredMedia && post.featuredMedia?.type !== '6'"
+            class="img-fluid"
+            src="{{post.featuredMedia.code.originalUrl}}"
+            alt="" />
+          <div *ngIf="post.featuredMedia && post.featuredMedia?.type === '6'"
+            class="img-fluid"
+            [innerHTML]="getIFrameCode(post.featuredMedia.code.iFrameCode)">
+          </div> -->
         </div>
       </div>
     </div>
