--- a/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.scss
+++ b/src/app/pages/sponsors/components/sponsor-posts/sponsor-posts.component.scss
@@ -106,7 +106,7 @@
       padding: 0;
 
       .img-container {
-        padding-top: 75%;
+        // padding-top: 75%;
         position: relative;
 
         img {
