--- a/src/app/shared/components/topic/topic.component.html
+++ b/src/app/shared/components/topic/topic.component.html
@@ -8,13 +8,21 @@
         [contentId]="topic.id" [title]="topic.title" [commentsCount]="topic.countOfComment"></dsod-rating>
       <h4 *ngIf="!showRating">{{topic.publishDate | date:'mediumDate'}}</h4>
     </div>
-    <div class="topic-block-thumbnail" *ngIf="topic.featuredMedia && showImage">
+    <div class="topic-block-thumbnail" *ngIf="topic.featuredMedia && topic.featuredMedia.type !== '6' && showImage">
       <a role="button" (click)="navigateTo($event)">
         <img *ngIf="imgLarge; else imgsm" [src]="getImageUrl(topic.featuredMedia.code.original)"
           class="img-fluid img-lg" alt="Feautred Thumbnail Large">
         <ng-template #imgsm>
           <img [src]="getImageUrl(topic.featuredMedia.code.original)" class="img-fluid" alt="Feautred Thumbnail small">
         </ng-template>
+      </a>
+      <a role="button" class="read-about thumbnail-link" (click)="navigateTo($event)">
+        <img src="assets/images/icons/{{topic.contentTypeName}}.png" alt="">
+      </a>
+    </div>
+    <div class="topic-block-thumbnail iframe-section" *ngIf="topic.featuredMedia && topic.featuredMedia.type === '6' && showImage">
+      <a role="button" (click)="navigateTo($event)">
+        <div class="iframe-container w-100 mt-2 mb-3" [innerHTML]="iFrameCode"></div>
       </a>
       <a role="button" class="read-about thumbnail-link" (click)="navigateTo($event)">
         <img src="assets/images/icons/{{topic.contentTypeName}}.png" alt="">
