--- a/src/styles.scss
+++ b/src/styles.scss
@@ -129,10 +129,8 @@ ul, li, ul li {
   }
 }
 .iframe-container {
-  /deep/ div {
-    max-width: none !important;
-    width: 100% !important;
-  }
+  position: relative;
+  min-height: 350px;
 }
 
 @media only screen and (min-width:1440px) {
