--- a/src/app/pages/preview/components/article-preview.component.html
+++ b/src/app/pages/preview/components/article-preview.component.html
@@ -23,6 +23,7 @@
       <div class="speakers-content mt-5" [innerHTML]="contentString"></div>
     </div>
   </div>
+  <dsod-gallery [photos]="content.photos"></dsod-gallery>
   <dsod-references [references]="content.references"></dsod-references>
   <div class="row essay-container" *ngIf="content.visualEssays.length">
     <div class="col-12">
@@ -34,7 +35,6 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <dsod-gallery [photosUrls]="content.photoUrls"></dsod-gallery>
       <h2 class="section-title" *ngIf="content.relativeTopicList">Related Content</h2>
       <div class="row">
         <div class="col-12 col-sm-6 col-md-4" *ngFor="let topic of content.relativeTopicList">
