--- a/src/app/shared/components/gallery/gallery.component.scss
+++ b/src/app/shared/components/gallery/gallery.component.scss
@@ -1,19 +1,22 @@
  @import 'variables';
 
- :host {
-   .essay-gallery {
-     margin-top: 30px;
-
-     h1 {
-       font-size: 30px;
-       font-weight: 600;
-       color: $color-primary
-     }
-
-     img {
-       width: 100%;
-       height: 100%;
-       object-fit: cover;
-     }
-   }
- }
+ .gallery-container {
+  margin: 20px 0;
+  h2 {
+    color: #7D7C7C;
+    padding: 0 0 16px 20px;
+    border-bottom: 1px solid #c0cad1;
+    font-family: "helvetica";
+    font-weight: bold;
+    margin-bottom: 15px;
+    font-size: 22px;
+  }
+  .carousel-image-container {
+    margin-top: 20px;
+    width: 65%;
+    margin: auto;
+    img {
+      width: 100%;
+    }
+  }
+}
