--- a/src/app/shared/components/shared-carousal/shared-carousal.component.html
+++ b/src/app/shared/components/shared-carousal/shared-carousal.component.html
@@ -5,16 +5,9 @@
   </div>
   <div class="glide__track" data-glide-el="track">
     <ul class="glide__slides" #slider>
-      <li class="glide__slide">
-        <img src="assets/images/banner-images/{{images[0]}}" alt="">
+      <li class="glide__slide" *ngFor="let image of images">
+        <img src="assets/images/banner-images/{{image}}" alt="">
       </li>
-      <li class="glide__slide">
-        <img src="assets/images/banner-images/{{images[1]}}" alt="">
-      </li>
-      <li class="glide__slide">
-        <img src="assets/images/banner-images/{{images[2]}}" alt="">
-      </li>
-
     </ul>
   </div>
   <div class="glide__arrows slider-controls" data-glide-el="controls">
