--- a/src/app/shared/components/topic/topic.component.scss
+++ b/src/app/shared/components/topic/topic.component.scss
@@ -93,6 +93,7 @@
         font-weight: 600;
         display: block;
         margin-bottom: 5px;
+        cursor: pointer;
 
         a.read-about {
           margin-left: 10px;
