--- a/src/app/pages/video/components/video-content/video-content.component.html
+++ b/src/app/pages/video/components/video-content/video-content.component.html
@@ -1,2 +1,1 @@
-<div *ngIf="content" class="video-content-inner" [innerHTML]="contentString">
-</div>
+<div *ngIf="content" class="video-content-inner" [innerHTML]="contentString"></div>
