--- a/src/app/pages/article/containers/article-page/article.component.html
+++ b/src/app/pages/article/containers/article-page/article.component.html
@@ -1,24 +1,24 @@
 <div class="page-content">
-  <div class="container" *ngIf="(pageContent$ | async)">
+  <div class="container" *ngIf="pageContent && pageContent.id">
     <div class="row">
       <div class="col-lg-9 article-content-wrap pr-3 pr-lg-4">
         <div class="article-content">
-          <dsod-article-media [content]="pageContent$ | async" [rating]="!avgRating?(pageContent$ | async)?.avgCommentRating:avgRating"></dsod-article-media>
-          <dsod-article-content [content]="(pageContent$ | async)?.content"></dsod-article-content>
-          <dsod-gallery [photos]="(pageContent$ | async)?.photos"></dsod-gallery>
-          <dsod-references [references]="(pageContent$ | async)?.references"></dsod-references>
-          <div class="row essay-container" *ngIf="(pageContent$ | async)?.visualEssays.length">
+          <dsod-article-media [content]="pageContent" [rating]="!avgRating ? pageContent?.avgCommentRating : avgRating"></dsod-article-media>
+          <dsod-article-content [content]="pageContent?.content"></dsod-article-content>
+          <dsod-gallery *ngIf="pageContent.photos.length" [photos]="pageContent?.photos"></dsod-gallery>
+          <dsod-references *ngIf="pageContent.references.length" [references]="pageContent?.references"></dsod-references>
+          <div class="row essay-container" *ngIf="pageContent?.visualEssays.length">
             <div class="col-12">
               <h3 class="essay-title">Visual Essay</h3>
             </div>
-            <div class="col-lg-12" *ngFor="let essay of (pageContent$ | async)?.visualEssays">
+            <div class="col-lg-12" *ngFor="let essay of pageContent?.visualEssays">
               <a class="essay-item" [routerLink]="['/visual-essay', essay.id]">{{essay.title}}</a>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-3 trending-videos-wrap">
-        <section class="trending-videos" *ngIf="(trendingTopics$ | async).length">
+        <section class="trending-videos" *ngIf="(trendingTopics$ | async)?.length">
           <h2 class="section-title">Trending Topics</h2>
           <div class="row">
             <div class="col-lg-12 col-md-7">
@@ -36,16 +36,16 @@
     </div>
     <div class="row">
       <div class="col-lg-9">
-        <div class="related-content" *ngIf="(pageContent$ | async)?.relativeTopicList.length">
+        <div class="related-content" *ngIf="pageContent?.relativeTopicList.length">
           <h2 class="section-title">Related Content</h2>
           <div class="row">
-            <div class="col-4" *ngFor="let topic of (pageContent$ | async)?.relativeTopicList">
-              <dsod-related-content [content]="topic" [contentTypeName]="(pageContent$ | async)?.contentTypeName"></dsod-related-content>
+            <div class="col-4" *ngFor="let topic of pageContent?.relativeTopicList">
+              <dsod-related-content [content]="topic" [contentTypeName]="pageContent?.contentTypeName"></dsod-related-content>
             </div>
           </div>
         </div>
         <div *ngIf="isLoggedIn">
-          <dsod-article-reviews [content]="pageContent$ | async" (updateRating)="updateRating($event)"></dsod-article-reviews>
+          <dsod-article-reviews [content]="pageContent" (updateRating)="updateRating($event)"></dsod-article-reviews>
         </div>
       </div>
     </div>
