--- a/src/app/pages/preview/components/content.scss
+++ b/src/app/pages/preview/components/content.scss
@@ -188,6 +188,9 @@
     font-size: 18px;
   }
 }
+h2.section-title {
+  padding: 0 0 16px;
+}
 @media only screen and (max-width:768px) {
   .featured-media-container {
     width: 100%;
