--- a/src/app/pages/preview/components/visual-essay-preview/visual-essay-preview.component.html
+++ b/src/app/pages/preview/components/visual-essay-preview/visual-essay-preview.component.html
@@ -2,7 +2,7 @@
   <div class="container" *ngIf="visualEssay">
     <div class="essay-container">
       <div class="row">
-        <div class="col-12" *ngIf="visualEssay.visualEssayImages">
+        <div class="col-12" *ngIf="visualEssay.visualEssayImages.length">
           <div class="carousel-image-container">
             <img [src]="getUrl(selectedCarouselImage)" />
           </div>
