DSTP-613 DSTP-614 DSTP-615

--- a/src/app/pages/sponsors/container/sponsors-container.component.html
+++ b/src/app/pages/sponsors/container/sponsors-container.component.html
@@ -2,5 +2,5 @@
 <dsod-shared-carousal [images]="bannerImages" [caption]="caption"></dsod-shared-carousal>
 </div>
 <div class="content-wrapper">
-  <router-outlet></router-outlet>
+<dsod-sponsor-content></dsod-sponsor-content>
 </div>
