--- a/src/app/shared/components/latest-item/latest-item.component.html
+++ b/src/app/shared/components/latest-item/latest-item.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="col-7">
       <dsod-topic [topic]="latestTopic" [contentLength]=276 [showImage]="false" [showHeader]="true" styleFor="content-lg"
-        [showRating]=true>
+        [showRating]=true [sponsorName]="sponsorName">
       </dsod-topic>
     </div>
   </div>
