--- a/src/app/shared/components/large-carousel/carousal-item-lg/carousal-item-lg.component.scss
+++ b/src/app/shared/components/large-carousel/carousal-item-lg/carousal-item-lg.component.scss
@@ -4,6 +4,22 @@
   .slide-content-wrap {
     position: relative;
 
+    .sponsored-by-tag span {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      color: #fff;
+      font-size: 21px;
+      margin-left: 125px;
+      margin-top: 15px;
+      img{
+        margin-right: 20px;
+      }
+    }
+
     .slider-overlay {
       position: absolute;
       left: 0;
