--- a/src/app/shared/components/trending/trending.component.html
+++ b/src/app/shared/components/trending/trending.component.html
@@ -4,12 +4,12 @@
     <div class="row">
       <div class="col-lg-12 col-md-7">
         <div *ngFor="let topic of trendingTopics">
-          <dsod-trending-item [trendingItem]="topic"></dsod-trending-item>
+          <dsod-trending-item [trendingItem]="topic" [sponsorName]="sponsorName"></dsod-trending-item>
         </div>
       </div>
       <div class="col-lg-12 col-md-5">
         <a [routerLink]="['/sponsors/GSK']">
-          <dsod-sponsored-ad *ngIf="trendingTopics.length"></dsod-sponsored-ad>
+          <dsod-sponsored-ad [sponsorName]="sponsorName"></dsod-sponsored-ad>
         </a>
       </div>
     </div>
